# x402-fpl-api

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MARKETING_DRAFTS.md  MARKETING_STRATEGY.md  PLAN.md  README.md  SECURITY.md  mcp_server.py  mcpize.yaml  pyproject.toml  smithery.yaml
.claude/commands/: engineer.md  fpl-researcher.md  marketing.md  monetizer.md  reviewer.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: accuracy-audit.yml  ci.yml  gw-snapshot.yml  publish.yml
.mcpize/: project.json
app/: config.py  fpl_client.py  main.py  x402.py
app/algorithms/: __init__.py  captain.py  chips.py  compare.py  consensus.py  dgw_intel.py  differentials.py  fixtures.py  hit_analyzer.py  league_analyzer.py  live.py  news.py  prices.py  rivals.py  scout.py  transfers.py  weight_optimizer.py
docs/: BACKLOG.md
scripts/: accuracy_audit.py  backtest.py  backtest_full.py  check_wallet.py  evaluate_gw.py  snapshot_gw.py  stats_snapshot.py
tests/: test_captain.py  test_chips.py  test_compare.py  test_dgw_intel.py  test_fpl_client.py  test_live.py  test_mcp_tools.py  test_scout.py  test_x402.py
