[project]
name = "x402-fpl-api"
version = "0.1.0"
description = "AI-agent-native FPL intelligence API with x402 micropayments"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
    "web3>=7.14.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
