[project]
name = "fpl-intelligence"
version = "0.22.0"
description = "AI-powered Fantasy Premier League MCP server — captain picks, transfer suggestions, player comparison, chip strategy, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "dohyung1"},
]
keywords = ["fpl", "fantasy-premier-league", "mcp", "claude", "ai", "fantasy-football"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
    "web3>=7.14.1",
]

[project.urls]
Homepage = "https://github.com/dohyung1/x402-fpl-api"
Repository = "https://github.com/dohyung1/x402-fpl-api"
Issues = "https://github.com/dohyung1/x402-fpl-api/issues"

[project.scripts]
fpl-intelligence = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "mcp_server.py"]
include = ["app/**", "mcp_server.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.1",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
